--- a/template_app/app/views/pages/index.html.erb
+++ b/template_app/app/views/pages/index.html.erb
@@ -1,37 +1,5 @@
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
-                <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
-            </a>
-        </div>
+<% provide(:title, "Home") %>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#download">Download</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
 
 <!-- Intro Header -->
 <header class="intro">
@@ -39,8 +7,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="brand-heading">Grayscale</h1>
-                    <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                    <h1 class="brand-heading">Spoty Music</h1>
+                    <p class="intro-text">The best music APP.</p>
+                    <%= link_to "Sign up", signup_path, class: "btn btn-default btn-lg" %><br>
+                    <br>
+                    <%= link_to "Sign in", '#', class: "btn btn-default btn-lg" %><br>
+                    <br>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
@@ -54,10 +26,9 @@
 <section id="about" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            <h2>About Spoty Music APP</h2>
+            <p>Spoty Music APP is a free music APP created by G28. It can be yours right now, just sign up.</p>
+            <p>Spoty Music APP includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
         </div>
     </div>
 </section>
@@ -67,9 +38,9 @@
     <div class="download-section">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Download Grayscale</h2>
-                <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                <h2>Download Spoty Music APP</h2>
+                <p>You can download Spoty Music APP for free on the preview page at G28.</p>
+                <a href="http://google.com" class="btn btn-default btn-lg">Visit Download Page</a>
             </div>
         </div>
     </div>
@@ -79,9 +50,9 @@
 <section id="contact" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-            <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+            <h2>Contact Spoty Music APP</h2>
+            <p>Feel free to email us to provide some feedback on our APP, give us suggestions for new functions, or to just say hello!</p>
+            <p><a href="mailto:G28@gmail.com">G28@gmail.com</a>
             </p>
             <ul class="list-inline banner-social-buttons">
                 <li>
@@ -100,10 +71,3 @@
 
 <!-- Map Section -->
 <div id="map"></div>
-
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Your Website 2014</p>
-    </div>
-</footer>
