--- a/template_app/app/views/layouts/application.html.erb
+++ b/template_app/app/views/layouts/application.html.erb
@@ -72,6 +72,55 @@
   <%= yield %>
 </body>
 
+<!-- About Section -->
+<section id="about" class="container content-section text-center">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2>About Spoty Music APP</h2>
+            <p>Spoty Music APP is a free music APP created by G28. It can be yours right now, just sign up.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Download Section -->
+<section id="download" class="content-section text-center">
+    <div class="download-section">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Download Spoty Music APP</h2>
+                <p>You can download Spoty Music APP for free on the preview page at G28.</p>
+                <a href="http://google.com" class="btn btn-default btn-lg">Visit Download Page</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="container content-section text-center">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2>Contact Spoty Music APP</h2>
+            <p>Feel free to email us to provide some feedback on our APP, give us suggestions for new functions, or to just say hello!</p>
+            <p><a href="mailto:G28@gmail.com">G28@gmail.com</a>
+            </p>
+            <ul class="list-inline banner-social-buttons">
+                <li>
+                    <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                </li>
+                <li>
+                    <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                </li>
+                <li>
+                    <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<!-- Map Section -->
+<div id="map"></div>
+
 <!-- Footer -->
 <footer>
     <div class="container text-center">
