User artist song

--- a/template_app/app/views/pages/index.html.erb
+++ b/template_app/app/views/pages/index.html.erb
@@ -11,7 +11,7 @@
                     <p class="intro-text">The best music APP.</p>
                     <%= link_to "Sign up", signup_path, class: "btn btn-default btn-lg" %><br>
                     <br>
-                    <%= link_to "Sign in", '#', class: "btn btn-default btn-lg" %><br>
+                    <%= link_to "Sign in", login_path, class: "btn btn-default btn-lg" %><br>
                     <br>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
