--- a/template_app/app/views/layouts/application.html.erb
+++ b/template_app/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
+            <a class="navbar-brand page-scroll" href=/>
                 <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Music
             </a>
         </div>
@@ -29,9 +29,25 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
-                <li>
-                    <%= link_to "Log out", '#' %><br>
-                </li>
+                <% if logged_in? %>
+                  <li><%= link_to "Users", '#' %></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Account <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Profile", current_user %></li>
+                      <li><%= link_to "Settings", '#' %></li>
+                      <li class="divider"></li>
+                      <li>
+                        <%= link_to "Log out", logout_path, method: :delete %>
+                      </li>
+                    </ul>
+                  </li>
+                <% else %>
+                  <li><%= link_to "Log in", login_path %></li>
+                <% end %>
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
