--- a/template_app/app/views/users/new.html.erb
+++ b/template_app/app/views/users/new.html.erb
@@ -4,21 +4,23 @@
   <div class="intro-body">
       <div class="container">
           <div class="row">
-              <div class="col-md-6 col-md-offset-3">
+              <div class="col-md-6 col-md-offset-3 col-lg-5">
                 <h2> Sign Up </h2><br><br>
                   <h6>
                     <%= form_for(@user) do |f| %>
+                      <%= render 'shared/error_messages' %>
+
                       <%= f.label :name %><br>
-                      <%= f.text_field :name %><br>
+                      <%= f.text_field :name, class: 'form-control'  %><br>
 
                       <%= f.label :email %><br>
-                      <%= f.email_field :email %><br>
+                      <%= f.email_field :email, class: 'form-control'  %><br>
 
                       <%= f.label :password %><br>
-                      <%= f.password_field :password %><br>
+                      <%= f.password_field :password, class: 'form-control'  %><br>
 
                       <%= f.label :password_confirmation, "Confirmation" %><br>
-                      <%= f.password_field :password_confirmation %><br>
+                      <%= f.password_field :password_confirmation, class: 'form-control'  %><br>
 
                       <%= f.submit "Create my account", class: "btn btn-default btn-lg" %>
                     <% end %>
