Justo antes de destroy users

--- a/template_app/app/assets/stylesheets/grayscale.css
+++ b/template_app/app/assets/stylesheets/grayscale.css
@@ -393,3 +393,13 @@ input, textarea, select, .uneditable-input {
 input {
   height: auto !important;
 }
+
+/* gravatar */
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+.gravatar_edit {
+  margin-top: 15px
+}
