--- a/template_app/app/views/users/index.html.erb
+++ b/template_app/app/views/users/index.html.erb
@@ -12,6 +12,11 @@
                   <li>
                     <p class="intro-text"><%= gravatar_for user, size:50 %><br></p>
                     <p class="intro-text"><%= link_to user.name, user %><br></p>
+                    <p class="intro-text">
+                      <% if current_user.admin? && !current_user?(user) %>
+                        | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+                      <% end %>
+                    <br></p>
                   </li>
                   <% end %>
                 </div>
