--- a/template_app/app/views/users/index.html.erb
+++ b/template_app/app/views/users/index.html.erb
@@ -8,17 +8,29 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   <h2> All users </h2>
-                  <% @users.each do |user| %>
-                  <li>
-                    <p class="intro-text"><%= gravatar_for user, size:50 %><br></p>
-                    <p class="intro-text"><%= link_to user.name, user %><br></p>
-                    <p class="intro-text">
-                      <% if current_user.admin? && !current_user?(user) %>
-                        | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
-                      <% end %>
-                    <br></p>
-                  </li>
-                  <% end %>
+                  <h6>
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th>Avatar</th>
+                          <th>Nombre</th>
+                          <th colspan="3"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <% @users.each do |user| %>
+                          <tr>
+                            <td><%= gravatar_for user, size:30 %></td>
+                            <td><%= link_to user.name, user %></td>
+                            <% if current_user.admin?%>
+                              <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                            <% end %>
+                          </tr>
+                        <% end %>
+                      </tbody>
+                    </table>
+                    <br>
+                  </h6>
                 </div>
             </div>
         </div>
