--- a/template_app/app/views/users/show.html.erb
+++ b/template_app/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                  <h2> Your account information: </h2>
+                  <h2> Account information: </h2>
                   <p class="intro-text"><%= gravatar_for @user %><br></p>
                   <p class="intro-text">Username: <%= @user.name %><br></p>
                   <p class="intro-text">Email: <%= @user.email %><br></p>
