--- a/template_app/app/views/artists/index.html.erb
+++ b/template_app/app/views/artists/index.html.erb
@@ -21,7 +21,7 @@
                           <tr>
                             <td><%= link_to artist.nombre, artist %></td>
                             <td><%= artist.genero %></td>
-                            <% if current_user.admin?%>
+                            <% if current_user.try(:admin?)%>
                               <td><%= link_to 'Edit', artist, method: :edit %></td>
                               <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                             <% end %>
@@ -30,7 +30,7 @@
                       </tbody>
                     </table>
                     <br>
-                    <% if current_user.admin? %>
+                    <% if current_user.try(:admin?) %>
                       <%= link_to 'New Artist', new_artist_path, class: "btn btn-default btn-lg" %>
                     <% end %>
                   </h6>
