--- a/template_app/app/views/artists/show.html.erb
+++ b/template_app/app/views/artists/show.html.erb
@@ -26,20 +26,21 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>Nombre</th>
+                      <th>Album</th>
                       <th>Genero</th>
+                      <th>Lanzamiento</th>
+                      <th>Numero canciones</th>
                       <th colspan="3"></th>
                     </tr>
                   </thead>
+
                   <tbody>
-                    <% @artists.each do |artist| %>
+                    <% @albums.each do |album| %>
                       <tr>
-                        <td><%= link_to artist.nombre, artist %></td>
-                        <td><%= artist.genero %></td>
-                        <% if current_user.admin?%>
-                          <td><%= link_to 'Edit', artist, method: :edit %></td>
-                          <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        <% end %>
+                        <td><%= link_to album.nombre, album %></td>
+                        <td><%= album.genero %></td>
+                        <td><%= album.lanzamiento %></td>
+                        <td><%= album.numero_canciones %></td>
                       </tr>
                     <% end %>
                   </tbody>
