--- a/template_app/app/views/artists/show.html.erb
+++ b/template_app/app/views/artists/show.html.erb
@@ -19,8 +19,9 @@
                 <%= @artist.genero %><br>
 
                 <strong>Periodo inicio:</strong>
-                <%= @artist.periodo_inicio %><br>
+                <%= @artist.periodo_inicio %><br><br><br>
               </h5>
+            </div>
 
               <h6>
                 <table class="table">
@@ -50,7 +51,6 @@
 
               <%= link_to 'Back', artists_path, class: "btn btn-default btn-lg"%>
               </p>
-            </div>
         </div>
     </div>
   </div>
